--- a/都队_工程报告.md
+++ b/都队_工程报告.md
@@ -35,7 +35,7 @@
 
 ## 二、团队分工
 
-### 穆佳月（组长）
+### 钱伟
 **负责模块：**
 1. **项目架构设计**
    - MVC架构搭建
@@ -48,7 +48,6 @@
    - 主窗口框架（main_window.py）
 
 3. **数据库功能**
-   - 数据库自动初始化功能
    - 学习记录重置功能
    - 数据备份与恢复机制
 
@@ -61,8 +60,9 @@
 
 ---
 
-### 宋国庆
+### 穆佳月
 **负责模块：**
+
 1. **错题本重构**
    - 知识点分组卡片设计（mistakes_widget.py +1100行）
    - 卡片复习模式实现
@@ -88,7 +88,7 @@
 
 ---
 
-### 钱伟
+### 宋国庆
 **负责模块：**
 1. **知识点学习模块**
    - 知识点展示界面（knowledge_widget.py）
@@ -121,40 +121,6 @@
 ## 三、项目亮点
 
 ### 3.1 技术创新亮点
-
-#### 1. 数据库自动初始化机制 ⭐⭐⭐⭐⭐
-
-**创新点：**
-- **首创零配置启动**：新用户无需手动执行初始化脚本，系统启动时自动检测数据库状态
-- **智能引导流程**：数据库缺失时弹窗引导，用户确认即可一键创建完整数据
-- **独立数据隔离**：每个用户克隆项目后创建独立数据库，互不影响
-
-**技术实现：**
-```python
-def check_and_init_database():
-    """启动时检查数据库是否存在"""
-    db_path = 'database/python_learning.db'
-
-    if not os.path.exists(db_path):
-        # 弹窗询问是否初始化
-        reply = QMessageBox.question(None, '数据库未初始化',
-                                     '是否立即初始化数据库？')
-
-        if reply == QMessageBox.Yes:
-            # 执行初始化脚本
-            init_database()
-            # 创建48个知识点 + 308道题目 + 3场考试
-```
-
-**解决的痛点：**
-- ❌ **传统方式**：新用户需要手动运行init_data.py，容易遗漏
-- ✅ **创新方式**：系统自动检测，引导式初始化，零门槛使用
-
-**实际效果：**
-- 新用户从克隆项目到开始学习，仅需3次点击（启动 → 确认初始化 → 登录）
-- 数据库创建过程全自动，无需技术背景
-
----
 
 #### 2. 智能错题本重构 ⭐⭐⭐⭐⭐
 
@@ -1227,45 +1193,8 @@ plt.title('各分类准确率统计')
 
 ---
 
-#### 未来扩展方向
-
-**1. 在线协作功能**
-- 学习小组：多人组队学习
-- 排行榜：全站学习时长/题目数量排名
-- 学习心得分享
-
-**2. 更丰富的题型**
-- 多选题：支持多个正确答案
-- 简答题：文本匹配+关键词评分
-- 代码调试题：给出错误代码，要求修正
-
-**3. 智能推荐系统**
-- 根据错题自动推荐相关知识点
-- 根据学习进度推荐练习题
-- 个性化学习路径规划
-
----
-
-### 7.3 感想与体会
-
-**穆佳月：**
-> "这个项目让我真正理解了什么是'工程化开发'。从架构设计到模块划分，从Git管理到代码审查，每一步都需要深思熟虑。印象最深的是数据库自动初始化功能，看似简单的一个弹窗，背后是对用户体验的极致追求。作为组长，我学会了如何协调团队，如何在技术和进度之间找到平衡点。"
-
-**宋国庆：**
-> "错题本重构是我最骄傲的工作。从传统列表到知识点分组卡片，从简单查看到卡片复习+重测，每一次迭代都能看到用户体验的提升。UI设计中的渐变背景、阴影效果、动画过渡，这些细节让我明白：好的软件不仅要功能强大，更要赏心悦目。AI助手集成让我第一次接触到大模型API，未来一定是AI的时代。"
-
-**钱伟：**
-> "代码编辑器和代码执行器的开发让我深刻理解了'安全'的重要性。如何在沙箱中执行代码？如何防止超时和资源泄漏？如何捕获print输出？每个问题都是一次挑战。数据可视化部分，Matplotlib的每个参数都需要反复调试，才能生成美观的图表。这个项目让我从'会写代码'进化到'会写好代码'。"
-
----
-
-### 7.4 致谢
-
-感谢老师提供的学习机会，感谢团队成员的辛勤付出，感谢开源社区提供的优秀框架和工具。这个项目不仅是一次作业，更是一次宝贵的工程实践经历。我们将继续完善这个系统，让更多的Python学习者受益。
-
----
-
 **报告编写：都队**
 **日期：2025年12月26日**
 **Python代码行数：10,100行**（核心代码，开发过程约13,000行）
-**项目地址：D:\work\111-master**
+**项目地址：[https://github.com/mjiayue/111-master](https://github.com/mjiayue/111-master)**
+
