--- a/都队_系统文档.md
+++ b/都队_系统文档.md
@@ -138,27 +138,7 @@
 
 ## 四、软件功能介绍
 
-### 4.1 数据库自动初始化
-
-**功能描述：**
-
-新用户首次启动系统时，自动检测数据库是否存在。若不存在，弹窗引导用户初始化数据库，自动创建48个知识点、308道题目和3场完整模拟考试。
-
-**技术实现：**
-- 启动时检查 `database/python_learning.db` 是否存在
-- 不存在时调用 `init_database()` 函数
-- 依次执行 `scripts/init_data.py` 和 `clean_duplicates_and_reconfigure.py`
-- 创建完整数据库结构并填充初始数据
-
-**界面流程：**
-
-![数据库初始化流程](数据库初始化流程.png)
-
-*（截图说明：显示"数据库未初始化"弹窗，提示用户是否立即初始化）*
-
----
-
-### 4.2 知识点学习模块
+### 4.1 知识点学习模块
 
 **功能描述：**
 
@@ -185,13 +165,13 @@
 
 **界面截图：**
 
-![知识点学习界面](知识点学习界面.png)
+![知识点学习界面](images/知识点学习界面.png)
 
 *（截图说明：左侧分类树，中间知识点列表，右侧内容展示区，底部进度条和"标记完成"按钮）*
 
 ---
 
-### 4.3 题库练习系统
+### 4.1 题库练习系统
 
 **功能描述：**
 
@@ -218,17 +198,17 @@
 
 **界面截图：**
 
-![题库练习-选择题](题库练习-选择题.png)
+![题库练习-选择题](images/题库练习-选择题.png)
 
 *（截图说明：顶部筛选条件，中间题目内容和选项，底部答案解析区）*
 
-![题库练习-编程题](题库练习-编程题.png)
+![题库练习-编程题](images/题库练习-编程题.png)
 
 *（截图说明：题目描述、代码编辑器、运行按钮、测试结果输出区）*
 
 ---
 
-### 4.4 智能错题本
+### 4.1 智能错题本
 
 **功能描述：**
 
@@ -265,21 +245,21 @@
 
 **界面截图：**
 
-![错题本-知识点分组](错题本-知识点分组.png)
+![错题本-知识点分组](images/错题本-知识点分组.png)
 
 *（截图说明：左侧复习设置区，右侧知识点分组卡片网格）*
 
-![错题本-卡片复习](错题本-卡片复习.png)
+![错题本-卡片复习](images/错题本-卡片复习.png)
 
 *（截图说明：全屏卡片复习模式，题目卡片、答案区、掌握状态按钮）*
 
-![错题本-重测功能](错题本-重测功能.png)
+![错题本-重测功能](images/错题本-重测功能.png)
 
 *（截图说明：重测界面，编程题代码编辑器、运行结果、提交按钮）*
 
 ---
 
-### 4.5 模拟考试系统
+### 4.1 模拟考试系统
 
 **功能描述：**
 
@@ -319,21 +299,21 @@
 
 **界面截图：**
 
-![模拟考试-考试列表](模拟考试-考试列表.png)
+![模拟考试-考试列表](images/模拟考试-考试列表.png)
 
 *（截图说明：可用考试卡片，显示考试名称、时长、题数、总分）*
 
-![模拟考试-答题界面](模拟考试-答题界面.png)
+![模拟考试-答题界面](images/模拟考试-答题界面.png)
 
 *（截图说明：顶部倒计时，题目内容，选项/作答区，题目导航）*
 
-![模拟考试-成绩详情](模拟考试-成绩详情.png)
+![模拟考试-成绩详情](images/模拟考试-成绩详情.png)
 
 *（截图说明：总分展示，各题型得分，答题详情列表）*
 
 ---
 
-### 4.6 AI学习助手
+### 4.1 AI学习助手
 
 **功能描述：**
 
@@ -370,17 +350,17 @@
 
 **界面截图：**
 
-![AI助手-悬浮按钮](AI助手-悬浮按钮.png)
+![AI助手-悬浮按钮](images/AI助手-悬浮按钮.png)
 
 *（截图说明：主界面右下角的圆形悬浮按钮）*
 
-![AI助手-聊天界面](AI助手-聊天界面.png)
+![AI助手-聊天界面](images/AI助手-聊天界面.png)
 
 *（截图说明：展开后的聊天面板，顶部标题栏，中间对话区，底部输入框）*
 
 ---
 
-### 4.7 代码编辑器
+### 4.1 代码编辑器
 
 **功能描述：**
 
@@ -410,13 +390,13 @@
 
 **界面截图：**
 
-![代码编辑器](代码编辑器.png)
+![代码编辑器](images/代码编辑器.png)
 
 *（截图说明：顶部工具栏，代码编辑区，底部输出区）*
 
 ---
 
-### 4.8 学习进度跟踪
+### 4.1 学习进度跟踪
 
 **功能描述：**
 
@@ -442,13 +422,13 @@
 
 **界面截图：**
 
-![学习进度](学习进度.png)
+![学习进度](images/学习进度.png)
 
 *（截图说明：顶部统计卡片，中间分类进度表，底部学习记录列表）*
 
 ---
 
-### 4.9 成绩统计分析
+### 4.1 成绩统计分析
 
 **功能描述：**
 
@@ -473,13 +453,13 @@
 
 **界面截图：**
 
-![成绩统计](成绩统计.png)
+![成绩统计](images/成绩统计.png)
 
 *（截图说明：左侧准确率饼图，右侧题型分布柱状图，底部练习记录表）*
 
 ---
 
-### 4.10 个人主页
+### 4.1 个人主页
 
 **功能描述：**
 
@@ -521,13 +501,13 @@
 
 **界面截图：**
 
-![个人主页](个人主页.png)
+![个人主页](images/个人主页.png)
 
 *（截图说明：顶部头像和昵称，学习数据徽章，外观设置，系统设置区）*
 
 ---
 
-### 4.11 用户登录系统
+### 4.1 用户登录系统
 
 **功能描述：**
 
@@ -545,7 +525,7 @@
 
 **界面截图：**
 
-![登录界面](登录界面.png)
+![登录界面](images/登录界面.png)
 
 *（截图说明：全屏启动动画，登录输入框）*
 
