--- a/都队_系统文档.md
+++ b/都队_系统文档.md
@@ -17,7 +17,7 @@
 
 ### 2.1 设计目标
 
-本系统是一款基于**Python计算机二级考试大纲**的桌面学习辅助工具，旨在为Python初学者和备考学生提供系统化、专业化的学习平台。通过知识点学习、题库练习、智能错题本、模拟考试、AI助手等功能，帮助用户高效掌握Python核心知识，提升编程能力。
+本应用是一款基于**Python计算机二级考试大纲**的桌面学习辅助工具，旨在为Python初学者和备考学生提供系统化、专业化的学习平台。通过知识点学习、题库练习、智能错题本、模拟考试、AI助手等功能，帮助用户高效掌握Python核心知识，提升编程能力。
 
 ### 2.2 核心功能
 
@@ -51,7 +51,7 @@
 │              用户界面层 (View)                    │
 │  ┌──────────┬──────────┬──────────┬──────────┐  │
 │  │知识点学习│题库练习  │错题本    │  AI助手  │  │
-│  │模拟考试  │代码编辑器│学习进度  │成绩统计  │  │
+│  │模拟考试  │代码编辑器│学习进度  │ 成绩统计  │  │
 │  └──────────┴──────────┴──────────┴──────────┘  │
 └─────────────────────────────────────────────────┘
                         ↕
@@ -257,6 +257,8 @@
 
 *（截图说明：重测界面，编程题代码编辑器、运行结果、提交按钮）*
 
+
+
 ---
 
 ### 4.1 模拟考试系统
@@ -301,7 +303,7 @@
 
 ![模拟考试-考试列表](images/模拟考试-考试列表.png)
 
-*（截图说明：可用考试卡片，显示考试名称、时长、题数、总分）*
+*（截图说明：可用考试卡片，显示考试名称、时长、总分）*
 
 ![模拟考试-答题界面](images/模拟考试-答题界面.png)
 
@@ -527,8 +529,6 @@
 
 ![登录界面](images/登录界面.png)
 
-*（截图说明：全屏启动动画，登录输入框）*
-
 ---
 
 ## 五、涉及的教学大纲和知识点
@@ -700,5 +700,5 @@ with open('data.txt', 'r', encoding='utf-8') as f:
 
 ---
 
-**文档编写：都队**
-**日期：2025年12月**
+**文档编写：钱伟**
+**日期：2025年12月27日**
