--- a/都队_工程报告.md
+++ b/都队_工程报告.md
@@ -37,24 +37,10 @@
 
 ### 钱伟
 **负责模块：**
-1. **项目架构设计**
-   - MVC架构搭建
-   - 模块化设计规划
-   - 数据库表结构设计
-
-2. **核心功能开发**
-   - 数据库管理器（db_manager.py）
-   - 数据加载工具（data_loader.py）
-   - 主窗口框架（main_window.py）
-
-3. **数据库功能**
-   - 学习记录重置功能
-   - 数据备份与恢复机制
-
-4. **Git版本管理**
-   - 分支管理（main、exam、review分支策略）
-   - 代码审查与合并
-   - 版本发布管理
+1. **项目架构设计**：MVC架构搭建、模块化设计规划、数据库表结构设计
+2. **核心功能开发**：数据库管理器（db_manager.py）、数据加载工具（data_loader.py）、主窗口框架（main_window.py）
+3. **数据库功能**：学习记录重置功能、数据备份与恢复机制
+4. **Git版本管理**：分支管理（main、exam、review分支策略）、代码审查与合并、版本发布管理
 
 **代码贡献：** 约4,500行
 
@@ -62,27 +48,10 @@
 
 ### 穆佳月
 **负责模块：**
-
-1. **错题本重构**
-   - 知识点分组卡片设计（mistakes_widget.py +1100行）
-   - 卡片复习模式实现
-   - 重测功能开发（支持编程题代码执行）
-   - 复习设置与进度跟踪
-
-2. **界面优化**
-   - 错题本UI重构（左右分栏布局）
-   - 卡片UI渐变背景和阴影效果
-   - 交互动画优化
-
-3. **AI助手集成**
-   - DeepSeek API对接（ai_assistant_widget.py）
-   - 悬浮式助手设计
-   - 对话管理与历史记录
-
-4. **多模块优化**
-   - 考试模块优化（exam_widget.py）
-   - 练习模块优化（practice_widget.py）
-   - 统计页面优化（statistics_widget.py）
+1. **错题本重构**：知识点分组卡片设计（mistakes_widget.py +1100行）、卡片复习模式实现、重测功能开发（支持编程题代码执行）、复习设置与进度跟踪
+2. **界面优化**：错题本UI重构（左右分栏布局）、卡片UI渐变背景和阴影效果、交互动画优化
+3. **AI助手集成**：DeepSeek API对接（ai_assistant_widget.py）、悬浮式助手设计、对话管理与历史记录
+4. **多模块优化**：考试模块优化（exam_widget.py）、练习模块优化（practice_widget.py）、统计页面优化（statistics_widget.py）
 
 **代码贡献：** 约4,800行
 
@@ -90,29 +59,11 @@
 
 ### 宋国庆
 **负责模块：**
-1. **知识点学习模块**
-   - 知识点展示界面（knowledge_widget.py）
-   - 学习进度跟踪
-   - 代码示例展示
-
-2. **题库练习系统**
-   - 四种题型支持（practice_widget.py）
-   - 题目筛选与加载
-   - 答题评判逻辑
-
-3. **代码编辑器**
-   - Python代码编辑器（editor_widget.py）
-   - 代码执行器（code_executor.py）
-   - 超时保护与安全沙箱
-
-4. **数据可视化**
-   - 成绩统计图表（statistics_widget.py）
-   - 学习进度展示（progress_widget.py）
-   - Matplotlib图表集成
-
-5. **数据初始化脚本**
-   - 初始数据脚本（scripts/init_data.py）
-   - 考试配置脚本（clean_duplicates_and_reconfigure.py）
+1. **知识点学习模块**：知识点展示界面（knowledge_widget.py）、学习进度跟踪、代码示例展示
+2. **题库练习系统**：四种题型支持（practice_widget.py）、题目筛选与加载、答题评判逻辑
+3. **代码编辑器**：Python代码编辑器（editor_widget.py）、代码执行器（code_executor.py）、超时保护与安全沙箱
+4. **数据可视化**：成绩统计图表（statistics_widget.py）、学习进度展示（progress_widget.py）、Matplotlib图表集成
+5. **数据初始化脚本**：初始数据脚本（scripts/init_data.py）、考试配置脚本（clean_duplicates_and_reconfigure.py）
 
 **代码贡献：** 约3,800行
 
@@ -120,309 +71,11 @@
 
 ## 三、项目亮点
 
-### 3.1 技术创新亮点
+**1. 智能错题本重构**：知识点分组卡片设计，支持卡片式复习模式，编程题重测功能带代码运行验证。
 
-#### 2. 智能错题本重构 
+**2. PTA风格多测试点判题**：3场模拟考试，38个测试点，编程题部分分机制，真实模拟二级考试评分规则。
 
-**创新点：**
-- **知识点分组卡片**：突破传统列表展示，采用卡片式UI按知识点分组
-- **卡片复习模式**：借鉴Anki记忆卡片理念，逐题复习，提升学习效率
-- **重测验证机制**：错题可重新作答，编程题支持代码编写和运行，真实检验掌握情况
-- **掌握状态管理**：标记"已掌握"或"模糊"，智能过滤已掌握题目
-
-**技术实现：**
-```python
-# 知识点分组卡片（渐变背景 + 阴影效果）
-category_card = QFrame()
-category_card.setStyleSheet('''
-    QFrame {
-        background: qlineargradient(
-            x1:0, y1:0, x2:0, y2:1,
-            stop:0 rgba(255,255,255,200),
-            stop:1 rgba(245,247,250,200)
-        );
-        border: 1px solid rgba(0,0,0,0.06);
-        border-radius: 10px;
-    }
-''')
-shadow = QGraphicsDropShadowEffect()
-shadow.setBlurRadius(18)
-shadow.setOffset(0, 4)
-category_card.setGraphicsEffect(shadow)
-```
-
-**功能对比：**
-
-| 功能 | 传统错题本 | 智能错题本 |
-|------|-----------|-----------|
-| 展示方式 | 列表 | 知识点分组卡片 |
-| 复习模式 | 浏览式 | 卡片式逐题复习 |
-| 重测功能 | ❌ | ✅ 支持重新作答 |
-| 掌握管理 | ❌ | ✅ 已掌握/模糊状态 |
-| 编程题支持 | ❌ | ✅ 代码编写+运行 |
-
-**实际效果：**
-- 错题复习效率提升**300%**（从浏览模式到卡片模式）
-- 编程题重测通过率提升**45%**（重新编码验证）
-- 用户满意度**95%**（UI美观 + 功能实用）
-
----
-
-#### 3. AI学习助手集成 
-
-**创新点：**
-- **DeepSeek API对接**：集成业界领先的大模型，提供智能问答
-- **领域限定提示词**：系统提示词限定在"计算机二级Python"范围，避免无关回答
-- **悬浮式设计**：不占用主界面空间，随时呼出，随时收起
-- **对话上下文管理**：保留历史对话，支持连续提问
-
-**技术实现：**
-```python
-# DeepSeek API调用（多线程异步）
-class DeepSeekThread(QThread):
-    response_received = pyqtSignal(str)
-
-    def run(self):
-        # 系统提示词限定范围
-        system_prompt = {
-            "role": "system",
-            "content": """你是专业的计算机二级Python教学助手，
-            专注解答Python基础语法、数据类型、流程控制、
-            函数、文件操作、异常处理等二级考试范围内的问题。
-            如果问题超出范围，请引导回相关知识点。"""
-        }
-
-        # API请求
-        response = requests.post(
-            "https://api.deepseek.com/v1/chat/completions",
-            headers={"Authorization": f"Bearer {api_key}"},
-            json={
-                "model": "deepseek-chat",
-                "messages": [system_prompt] + conversation_history,
-                "temperature": 0.7,
-                "max_tokens": 2000
-            }
-        )
-```
-
-**功能特色：**
-- **智能问答**：支持代码解释、错误调试、知识点讲解
-- **快捷模板**：内置常见问题模板，一键提问
-- **Markdown渲染**：代码块语法高亮，排版美观
-
-**实际效果：**
-- 平均响应时间**2-3秒**
-- 回答准确率**90%+**（限定范围内）
-- 支持连续对话，理解上下文
-
----
-
-#### 4. 模拟考试PTA风格判题 
-
-**创新点：**
-- **多测试点评分**：编程题采用PTA（拼题A）风格，每道题配备多个测试用例
-- **部分分机制**：通过部分测试点即可获得部分分数，更真实模拟二级考试
-- **测试点管理**：test_cases表独立管理，支持扩展
-
-**技术实现：**
-```python
-# 编程题多测试点判题
-def run_code_with_test_cases(code, question_id):
-    test_cases = load_test_cases(question_id)  # 加载测试点
-    results = []
-    total_score = 0
-
-    for test_case in test_cases:
-        # 运行代码，传入测试输入
-        output = execute_code(code, test_case.input_data)
-
-        # 对比输出
-        if output.strip() == test_case.expected_output.strip():
-            results.append({'passed': True, 'score': test_case.score})
-            total_score += test_case.score
-        else:
-            results.append({'passed': False, 'score': 0})
-
-    return {'total_score': total_score, 'results': results}
-```
-
-**数据规模：**
-- 3场模拟考试，每场46题
-- 编程题测试点总数：**38个**
-- 平均每道编程题：**2-3个测试点**
-
-**实际效果：**
-- 判题准确性**100%**（多测试点验证）
-- 部分分机制让学生更有成就感
-- 真实模拟二级考试评分规则
-
----
-
-#### 5. 学习记录重置功能 
-
-**创新点：**
-- **智能重置**：只清空个人学习数据，保留题库和考试内容
-- **二次确认机制**：弹窗确认 + 输入"确认重置"文字验证，防止误操作
-- **数据安全**：自动备份旧数据为.backup文件
-
-**技术实现：**
-```python
-def reset_database(self):
-    """重置学习记录：清空个人数据，保留题库"""
-    # 第一次确认
-    reply = QMessageBox.warning(self, '危险操作',
-                               '此操作将清空所有学习记录，是否继续？')
-
-    # 第二次确认（输入确认文字）
-    text, ok = QInputDialog.getText(self, '最终确认',
-                                    '请输入"确认重置"：')
-
-    if ok and text.strip() == '确认重置':
-        # 只删除用户相关记录表
-        db_manager.execute_update('DELETE FROM learning_records WHERE user_id = ?')
-        db_manager.execute_update('DELETE FROM practice_records WHERE user_id = ?')
-        db_manager.execute_update('DELETE FROM wrong_questions WHERE user_id = ?')
-        db_manager.execute_update('DELETE FROM exam_records WHERE user_id = ?')
-        # 保留 questions, knowledge_points, exams 表
-```
-
-**清空vs保留对比：**
-
-| 数据类型 | 操作 | 原因 |
-|---------|------|------|
-| 学习记录 | ✅ 清空 | 个人学习进度 |
-| 练习记录 | ✅ 清空 | 个人练习历史 |
-| 错题本 | ✅ 清空 | 个人错题数据 |
-| 考试记录 | ✅ 清空 | 个人考试成绩 |
-| 题库题目 | ❌ 保留 | 系统基础数据 |
-| 知识点内容 | ❌ 保留 | 系统基础数据 |
-| 模拟考试 | ❌ 保留 | 系统基础数据 |
-
-**实际效果：**
-- 老用户可以重新开始学习
-- 题库和考试不受影响
-- 误操作概率降低至**0.1%**（二次确认）
-
----
-
-### 3.2 项目管理亮点
-
-#### 1. Git分支管理策略 
-
-**分支策略：**
-- **main分支**：稳定版本，经过测试的可发布代码
-- **exam分支**：新功能开发和测试分支
-- **review分支**：团队协作代码审查分支
-
-**工作流程：**
-```
-开发新功能 → exam分支开发 → 本地测试 → 提交到exam分支
-→ 合并到review分支 → 团队审查 → 合并到main分支 → 发布
-```
-
-**实际案例：**
-```bash
-# 案例1：数据库初始化功能开发
-git checkout exam
-# 开发功能...
-git add main.py
-git commit -m "feat: 添加数据库初始化功能"
-git push origin exam
-# 测试通过
-git checkout main
-git merge exam
-git push origin main
-
-# 案例2：错题本重构（团队协作）
-# 组员传来代码 → 复制到review分支 → 本地测试 → 合并到main
-```
-
-**团队规范：**
-- ✅ 所有新功能必须在exam分支开发
-- ✅ 测试通过才能合并到main
-- ✅ 提交信息规范：`feat:` / `fix:` / `docs:` / `style:`
-- ✅ 重要节点打tag标记版本
-
-**实际效果：**
-- 代码冲突率**<5%**
-- 回滚操作**0次**（分支隔离保护main）
-- 提交历史清晰，易于追溯
-
----
-
-#### 2. 模块化开发与代码复用 
-
-**模块划分：**
-```
-项目模块化设计
-├── models/          # 数据模型层（4个模型类）
-├── ui/              # 界面视图层（20个Widget）
-├── database/        # 数据访问层（1个管理器）
-├── utils/           # 工具层（2个工具类）
-└── scripts/         # 脚本层（初始化脚本）
-```
-
-**代码复用策略：**
-1. **数据库管理器单例模式**：
-```python
-class DatabaseManager:
-    _instance = None
-
-    def __new__(cls):
-        if cls._instance is None:
-            cls._instance = super().__new__(cls)
-        return cls._instance
-```
-
-2. **统一的数据加载器**：
-```python
-class DataLoader:
-    @staticmethod
-    def load_knowledge_points(category=None):
-        """统一的知识点加载方法"""
-        # 所有模块共用此方法
-
-    @staticmethod
-    def load_questions(category=None, qtype=None):
-        """统一的题目加载方法"""
-        # 所有模块共用此方法
-```
-
-**实际效果：**
-- 代码复用率**85%**
-- 数据库操作代码集中管理，易于维护
-- 新增功能开发效率提升**50%**
-
----
-
-### 3.3 用户体验亮点
-
-#### 1. 响应式界面设计 
-
-**技术实现：**
-
-- QSplitter分栏布局（错题本、AI助手）
-- QScrollArea滚动区域（知识点列表）
-- 自适应窗口大小（主窗口resize事件）
-
-**视觉优化：**
-- 统一配色方案（config.py定义主题色）
-- 圆角卡片设计（border-radius: 10px）
-- 渐变背景（qlineargradient）
-- 阴影效果（QGraphicsDropShadowEffect）
-
-#### 2. 即时反馈机制 
-
-**答题反馈：**
-- 提交答案后**0.1秒**显示结果
-- 正确答案绿色高亮
-- 错误答案红色提示 + 显示正确答案
-- 详细解析展开
-
-**学习进度反馈：**
-- 实时更新学习时长
-- 进度条动画效果
-- 完成知识点即时统计
+**3. AI学习助手**：集成DeepSeek API，领域限定提示词，悬浮式设计，平均响应2-3秒。
 
 ---
 
@@ -430,11 +83,7 @@ class DataLoader:
 
 ### 4.1 装饰器（Decorator）应用
 
-#### 应用场景：数据库连接管理
-
-**问题：** 每次数据库操作都需要手动connect()和disconnect()，容易遗漏
-
-**解决方案：** 使用装饰器自动管理连接
+**应用场景：** 数据库连接管理
 
 ```python
 def with_database_connection(func):
@@ -448,32 +97,21 @@ def with_database_connection(func):
             db_manager.disconnect()
     return wrapper
 
-# 使用示例
-class DataLoader:
-    @staticmethod
-    @with_database_connection
-    def load_user_statistics(user_id):
-        """加载用户统计数据"""
-        sql = "SELECT * FROM study_statistics WHERE user_id = ?"
-        return db_manager.execute_query(sql, (user_id,))
+@with_database_connection
+def load_user_statistics(user_id):
+    """加载用户统计数据"""
+    sql = "SELECT * FROM study_statistics WHERE user_id = ?"
+    return db_manager.execute_query(sql, (user_id,))
 ```
 
-**优势：**
-- ✅ 代码简洁：无需重复写连接/断开代码
-- ✅ 防止泄漏：finally确保连接一定关闭
-- ✅ 易于维护：连接逻辑集中在装饰器中
-
-**实际效果：**
-- 数据库相关代码量减少**30%**
-- 连接泄漏bug数量：**0个**
+**优势：** 代码简洁，防止连接泄漏，易于维护。
 
 ---
 
 ### 4.2 上下文管理器（with语句）
 
-#### 应用场景：文件操作和代码执行
+**应用场景：** 文件操作和代码执行
 
-**文件读写：**
 ```python
 # 代码保存功能
 def save_code(self):
@@ -481,42 +119,16 @@ def save_code(self):
     if file_path:
         with open(file_path, 'w', encoding='utf-8') as f:
             f.write(self.editor.toPlainText())
-        QMessageBox.information(self, '成功', '代码已保存！')
 ```
 
-**代码执行（重定向输出）：**
-```python
-def execute_code(code_string, timeout=5):
-    """安全执行Python代码"""
-    import sys
-    from io import StringIO
-
-    # 重定向标准输出
-    old_stdout = sys.stdout
-    sys.stdout = StringIO()
-
-    try:
-        exec(code_string, {'__builtins__': __builtins__})
-        output = sys.stdout.getvalue()
-        return {'status': 'success', 'output': output}
-    except Exception as e:
-        return {'status': 'error', 'output': str(e)}
-    finally:
-        sys.stdout = old_stdout  # 恢复标准输出
-```
-
-**优势：**
-- ✅ 自动资源管理：with语句自动关闭文件
-- ✅ 异常安全：即使发生异常也能正确清理资源
-- ✅ 代码简洁：无需手动try-finally
+**优势：** 自动资源管理，异常安全，代码简洁。
 
 ---
 
 ### 4.3 列表推导式与生成器表达式
 
-#### 应用场景：数据处理和UI生成
+**应用场景：** 数据处理和UI生成
 
-**快速数据筛选：**
 ```python
 # 筛选未掌握的错题
 unmastered_mistakes = [
@@ -531,58 +143,22 @@ grouped_mistakes = {
 }
 ```
 
-**UI组件批量生成：**
-```python
-# 生成知识点分组卡片
-category_cards = [
-    self._create_category_card(title, count, category_key)
-    for category_key, (title, count) in category_data.items()
-]
-
-# 添加到布局
-for card in category_cards:
-    grid_layout.addWidget(card)
-```
-
-**优势：**
-- ✅ 代码简洁：一行代码完成复杂逻辑
-- ✅ 性能优秀：比传统循环快**20-30%**
-- ✅ 可读性强：符合Python风格
-
-**实际效果：**
-- 数据处理代码量减少**40%**
-- 执行效率提升**25%**
+**优势：** 代码简洁，性能优秀，可读性强。
 
 ---
 
 ### 4.4 字典的高级用法
 
-#### 应用场景：配置管理和数据映射
+**应用场景：** 配置管理和数据映射
 
-**主题配置管理：**
 ```python
-# config.py
+# 主题配置管理
 THEME_COLORS = {
-    'primary': '#0078D7',      # 主题蓝色
-    'success': '#28A745',      # 成功绿色
-    'danger': '#DC3545',       # 危险红色
-    'warning': '#FFC107',      # 警告黄色
-    'background': '#F6F7F9',   # 背景灰色
+    'primary': '#0078D7',
+    'success': '#28A745',
+    'danger': '#DC3545',
 }
 
-QUESTION_TYPES = {
-    'choice': '选择题',
-    'judge': '判断题',
-    'fill': '填空题',
-    'code': '编程题',
-}
-
-# 使用get方法安全获取
-color = THEME_COLORS.get('primary', '#000000')  # 提供默认值
-```
-
-**题型映射：**
-```python
 # 题型对应的判题函数
 JUDGE_FUNCTIONS = {
     'choice': judge_choice_question,
@@ -596,34 +172,14 @@ judge_func = JUDGE_FUNCTIONS.get(question_type)
 result = judge_func(user_answer, correct_answer)
 ```
 
-**字典推导式：**
-```python
-# 统计各分类题目数量
-category_counts = {
-    category: len([q for q in questions if q['category'] == category])
-    for category in set(q['category'] for q in questions)
-}
-
-# 按分数从高到低排序考试记录
-sorted_exams = dict(sorted(
-    exam_records.items(),
-    key=lambda x: x[1]['score'],
-    reverse=True
-))
-```
-
-**优势：**
-- ✅ 配置集中管理：易于修改和维护
-- ✅ 代码灵活：通过键值对动态调用函数
-- ✅ 性能优秀：O(1)查找时间复杂度
+**优势：** 配置集中管理，代码灵活，性能优秀（O(1)查找）。
 
 ---
 
 ### 4.5 异常处理与日志记录
 
-#### 应用场景：数据库操作和代码执行
+**应用场景：** 数据库操作和代码执行
 
-**数据库操作异常处理：**
 ```python
 def execute_query(self, sql, params=()):
     """执行查询，返回结果"""
@@ -633,106 +189,41 @@ def execute_query(self, sql, params=()):
         return cursor.fetchall()
     except sqlite3.Error as e:
         print(f"❌ 数据库查询错误: {e}")
-        print(f"   SQL: {sql}")
-        print(f"   参数: {params}")
         return []
     finally:
         if cursor:
             cursor.close()
 ```
 
-**代码执行超时保护：**
-```python
-import signal
-
-def timeout_handler(signum, frame):
-    raise TimeoutError("代码执行超时（5秒）")
-
-def execute_code_with_timeout(code, timeout=5):
-    """带超时保护的代码执行"""
-    signal.signal(signal.SIGALRM, timeout_handler)
-    signal.alarm(timeout)
-
-    try:
-        exec(code)
-        signal.alarm(0)  # 取消超时
-        return {'status': 'success'}
-    except TimeoutError:
-        return {'status': 'error', 'message': '代码执行超时'}
-    except Exception as e:
-        return {'status': 'error', 'message': str(e)}
-    finally:
-        signal.alarm(0)
-```
-
-**优势：**
-- ✅ 错误定位准确：打印详细错误信息
-- ✅ 程序健壮性强：不会因异常崩溃
-- ✅ 用户体验好：友好的错误提示
+**优势：** 错误定位准确，程序健壮性强，用户体验好。
 
 ---
 
 ### 4.6 多线程（QThread）应用
 
-#### 应用场景：AI助手API调用
-
-**问题：** API请求耗时2-3秒，会阻塞主界面
-
-**解决方案：** 使用QThread多线程异步调用
+**应用场景：** AI助手API调用
 
 ```python
 class DeepSeekThread(QThread):
     """DeepSeek API调用线程"""
-    response_received = pyqtSignal(str)  # 成功信号
-    error_occurred = pyqtSignal(str)     # 错误信号
-    loading_state = pyqtSignal(bool)     # 加载状态信号
-
-    def __init__(self, messages, api_key):
-        super().__init__()
-        self.messages = messages
-        self.api_key = api_key
+    response_received = pyqtSignal(str)
+    error_occurred = pyqtSignal(str)
 
     def run(self):
-        """在子线程中执行"""
         try:
-            self.loading_state.emit(True)  # 显示加载动画
-
-            # API请求
             response = requests.post(
                 "https://api.deepseek.com/v1/chat/completions",
                 headers={"Authorization": f"Bearer {self.api_key}"},
                 json={"model": "deepseek-chat", "messages": self.messages},
                 timeout=30
             )
-
-            if response.status_code == 200:
-                content = response.json()["choices"][0]["message"]["content"]
-                self.response_received.emit(content)  # 发送结果
-            else:
-                self.error_occurred.emit("API请求失败")
+            content = response.json()["choices"][0]["message"]["content"]
+            self.response_received.emit(content)
         except Exception as e:
             self.error_occurred.emit(str(e))
-        finally:
-            self.loading_state.emit(False)  # 隐藏加载动画
-
-# 使用
-def send_message(self):
-    self.thread = DeepSeekThread(messages, api_key)
-    self.thread.response_received.connect(self.on_response)
-    self.thread.error_occurred.connect(self.on_error)
-    self.thread.loading_state.connect(self.on_loading)
-    self.thread.start()  # 启动子线程
 ```
 
-**优势：**
-- ✅ 界面不卡顿：API请求在子线程执行
-- ✅ 实时反馈：通过信号槽更新UI
-- ✅ 安全退出：线程生命周期管理
-
-**实际效果：**
-- API调用期间界面流畅度**100%**
-- 用户可继续其他操作
-- 加载动画实时更新
+**优势：** 界面不卡顿，实时反馈，安全退出。
 
 ---
 
@@ -740,38 +231,18 @@ def send_message(self):
 
 ### 5.1 环境依赖问题
 
-#### 问题1：缺少依赖包
+**问题1：缺少依赖包**
 
-**现象：**
-```
-ModuleNotFoundError: No module named 'PyQt5'
-```
+**现象：** `ModuleNotFoundError: No module named 'PyQt5'`
 
 **解决方案：**
 ```bash
-# 方法1：使用requirements.txt（推荐）
 pip install -r requirements.txt
-
-# 方法2：手动安装
-pip install PyQt5>=5.15.0
-pip install matplotlib>=3.5.0
-pip install numpy>=1.21.0
-pip install pillow>=9.0.0
-pip install requests>=2.31.0
 ```
-
-**注意事项：**
-- 必须使用Python 3.7或更高版本
-- 建议使用虚拟环境（venv）隔离依赖
 
 ---
 
-#### 问题2：PyQt5安装失败（Windows）
-
-**现象：**
-```
-ERROR: Could not find a version that satisfies the requirement PyQt5
-```
+**问题2：PyQt5安装失败（Windows）**
 
 **解决方案：**
 ```bash
@@ -780,318 +251,72 @@ python -m pip install --upgrade pip
 
 # 使用国内镜像源
 pip install PyQt5 -i https://pypi.tuna.tsinghua.edu.cn/simple
-
-# 如果仍失败，下载whl文件手动安装
-# https://www.lfd.uci.edu/~gohlke/pythonlibs/#pyqt5
-pip install PyQt5-5.15.10-cp313-cp313-win_amd64.whl
 ```
 
 ---
 
 ### 5.2 数据库相关问题
 
-#### 问题3：数据库文件损坏
+**问题3：数据库文件损坏**
 
-**现象：**
-```
-sqlite3.DatabaseError: database disk image is malformed
-```
+**现象：** `sqlite3.DatabaseError: database disk image is malformed`
 
 **解决方案：**
 ```bash
-# 方法1：使用备份恢复
+# 使用备份恢复
 cd database
 copy python_learning.db.backup python_learning.db
-
-# 方法2：删除数据库重新初始化
-del database\python_learning.db
-python main.py  # 系统自动引导初始化
 ```
 
 ---
 
-#### 问题4：数据库锁定
+**问题4：数据库锁定**
 
-**现象：**
-```
-sqlite3.OperationalError: database is locked
-```
+**现象：** `sqlite3.OperationalError: database is locked`
 
-**原因：** 多个进程同时访问数据库
-
-**解决方案：**
-- 关闭其他正在运行的程序实例
-- 检查是否有其他Python脚本在操作数据库
-- 重启程序
+**解决方案：** 关闭其他正在运行的程序实例，重启程序。
 
 ---
 
 ### 5.3 代码执行相关问题
 
-#### 问题5：编程题执行超时
+**问题5：编程题执行超时**
 
 **现象：** 编程题运行时提示"代码执行超时（5秒）"
 
-**原因：** 代码中有死循环或复杂度过高
-
-**解决方案：**
-- 检查代码是否有死循环
-- 优化算法复杂度
-- 调整超时时间（config.py中修改EDITOR_CONFIG）
-
----
-
-#### 问题6：代码执行权限错误
-
-**现象：**
-```
-PermissionError: [WinError 5] 拒绝访问
-```
-
-**原因：** 代码尝试访问受保护的文件或系统资源
-
-**解决方案：**
-- 检查代码是否访问敏感路径
-- 使用相对路径代替绝对路径
-- 以管理员身份运行程序
+**解决方案：** 检查代码是否有死循环，优化算法复杂度。
 
 ---
 
 ### 5.4 AI助手相关问题
 
-#### 问题7：AI助手无响应
+**问题6：AI助手无响应**
 
-**现象：** 点击发送后无任何反应
-
-**原因：** 网络问题或API密钥失效
-
-**解决方案：**
-```python
-# 检查网络连接
-ping api.deepseek.com
-
-# 检查API密钥是否有效
-# ui/ai_assistant_widget.py 第122行
-self.api_key = "sk-ea90d96bf2b141b0b0dbaab768d9bcde"
-# 替换为您的API密钥
-```
-
----
-
-#### 问题8：API请求超时
-
-**现象：**
-```
-requests.exceptions.Timeout: 请求超时
-```
-
-**解决方案：**
-- 检查网络连接
-- 增加超时时间（ai_assistant_widget.py第72行）
-```python
-response = requests.post(url, headers=headers, json=data, timeout=60)  # 改为60秒
-```
+**解决方案：** 检查网络连接，确认API密钥是否有效。
 
 ---
 
 ### 5.5 界面显示问题
 
-#### 问题9：界面字体过小/过大
+**问题7：界面字体过小/过大**
 
-**解决方案：**
-- 进入"个人主页"标签
-- 在"外观设置"中调整字体大小
-- 支持90%、100%、110%、125%四种比例
-
----
-
-#### 问题10：界面显示不全
-
-**原因：** 屏幕分辨率过低
-
-**建议分辨率：** 1920x1080或更高
-
-**解决方案：**
-- 最大化窗口
-- 调整屏幕缩放比例（Windows设置 → 显示）
-
----
-
-### 5.6 路径相关问题
-
-#### 问题11：找不到数据库文件
-
-**现象：**
-```
-FileNotFoundError: database/python_learning.db
-```
-
-**原因：** 运行路径不正确
-
-**解决方案：**
-```bash
-# 必须在项目根目录运行
-cd D:\work\111-master
-python main.py
-
-# 不要在其他目录运行
-# ❌ cd D:\work
-# ❌ python 111-master\main.py
-```
+**解决方案：** 进入"个人主页"标签，在"外观设置"中调整字体大小。
 
 ---
 
 ## 六、工具使用情况
 
-### 6.1 开发工具
+**VS Code（主要IDE）**：轻量级IDE，启动快速，插件丰富（Python扩展、Git集成、Markdown预览），智能代码补全和调试功能强大。
 
-#### 1. VS Code（主要IDE）
+**Git + GitHub**：三分支策略（main、exam、review），提交规范（feat、fix、docs前缀），总提交50+次，分支合并15+次。
 
-**版本：** Visual Studio Code 1.85.1
+**DeepSeek AI API**：性价比高，响应速度快（2-3秒），中文优化，稳定性好（99.5%+可用性），月调用约500次。
 
-**选择理由：**
-- **轻量级**：启动速度快（<2秒），占用内存少（<500MB）
-- **插件丰富**：Python扩展、Git集成、Markdown预览
-- **智能提示**：IntelliSense代码补全，函数签名提示
-- **调试功能**：断点调试，变量查看，调用栈分析
+**SQLite Database Browser**：可视化查看数据库表结构，手动执行SQL查询测试，轻量级免费开源工具。
 
-**使用的扩展：**
-- Python（ms-python.python）：语法高亮、Linting、调试
-- Pylint：代码规范检查
-- GitLens：Git增强工具
-- Markdown All in One：Markdown编辑
+**Matplotlib 3.10.0**：生成准确率饼图和题型分布柱状图，中文字体支持，与PyQt5集成方便，性能优秀（<0.5秒生成图表）。
 
----
-
-#### 2. PyCharm Community（辅助IDE）
-
-**版本：** PyCharm Community 2024.1
-
-**使用场景：**
-- 数据库可视化（Database Tool）
-- 重构代码（Refactor功能）
-- 单元测试（pytest集成）
-
-**选择理由：**
-- **专业Python IDE**：代码分析更深入
-- **数据库工具**：可视化查看SQLite数据库
-- **重构支持**：安全重命名、提取方法
-
----
-
-### 6.2 版本控制工具
-
-#### Git + GitHub
-
-**Git版本：** Git 2.43.0
-
-**使用功能：**
-- **分支管理**：main、exam、review三分支策略
-- **提交规范**：feat、fix、docs、style前缀
-- **冲突解决**：手动merge，保持历史清晰
-- **版本回退**：git reset、git revert
-
-**GitHub仓库：**
-- **远程仓库**：https://github.com/mjiayue/111-master.git
-- **分支同步**：定期push到远程
-- **协作模式**：Pull Request审查（review分支）
-
-**实际统计：**
-- 总提交次数：**50+**
-- 分支合并次数：**15+**
-- 代码冲突解决：**3次**
-
----
-
-### 6.3 API服务
-
-#### DeepSeek AI API
-
-**服务商：** DeepSeek（深度求索）
-
-**API版本：** v1
-
-**选择理由：**
-- **性价比高**：相比GPT-4价格便宜**80%**
-- **响应速度快**：平均响应时间**2-3秒**
-- **中文优化**：中文理解能力强，适合教学场景
-- **稳定性好**：可用性**99.5%+**
-
-**使用配置：**
-```python
-API_KEY = "sk-ea90d96bf2b141b0b0dbaab768d9bcde"
-MODEL = "deepseek-chat"
-TEMPERATURE = 0.7      # 平衡创造性和准确性
-MAX_TOKENS = 2000      # 限制回答长度
-TIMEOUT = 30           # 超时时间30秒
-```
-
-**费用统计：**
-- 月调用次数：约500次
-- 月费用：约￥10（非常经济）
-
----
-
-### 6.4 数据库工具
-
-#### SQLite Database Browser
-
-**版本：** DB Browser for SQLite 3.12.2
-
-**使用场景：**
-- 可视化查看数据库表结构
-- 手动执行SQL查询测试
-- 导出数据为CSV/JSON
-
-**选择理由：**
-- **免费开源**：无使用限制
-- **跨平台**：Windows/Mac/Linux均支持
-- **轻量级**：不依赖服务器，直接打开.db文件
-
----
-
-### 6.5 图表生成工具
-
-#### Matplotlib
-
-**版本：** 3.10.0
-
-**使用场景：**
-- 准确率饼图（statistics_widget.py）
-- 题型分布柱状图
-
-**选择理由：**
-- **Python原生**：与PyQt5集成方便
-- **自定义性强**：颜色、字体、图例完全可控
-- **性能优秀**：生成图表速度快（<0.5秒）
-
-**配置示例：**
-```python
-# 中文字体支持
-plt.rcParams['font.sans-serif'] = ['Microsoft YaHei']
-plt.rcParams['axes.unicode_minus'] = False
-
-# 饼图生成
-plt.pie(values, labels=labels, autopct='%1.1f%%', colors=colors)
-plt.title('各分类准确率统计')
-```
-
----
-
-### 6.6 测试工具
-
-#### 手动测试
-
-**测试流程：**
-1. **功能测试**：逐一测试每个功能模块
-2. **边界测试**：空输入、超长输入、特殊字符
-3. **异常测试**：断网、数据库损坏、API失效
-4. **兼容性测试**：Windows 10/11，Python 3.7-3.13
-
-**测试记录：**
-- 发现bug数量：**12个**
-- 已修复bug：**12个**
-- 遗留bug：**0个**
+**手动测试流程**：功能测试、边界测试、异常测试、兼容性测试。发现并修复12个bug，遗留bug 0个。
 
 ---
 
@@ -1099,98 +324,25 @@ plt.title('各分类准确率统计')
 
 ### 7.1 主要收获
 
-#### 技术能力提升
+**技术能力提升：**
 
-**1. PyQt5框架掌握**
-- **从零到熟练**：从完全不了解到能独立开发复杂界面
-- **信号槽机制**：深刻理解Qt的事件驱动模型
-- **自定义控件**：掌握继承QWidget创建复杂组件
+**1. PyQt5框架掌握**：从零到熟练，深刻理解信号槽机制和事件驱动模型，掌握自定义控件开发。错题本卡片复习模式综合运用了QSplitter、QScrollArea和自定义Widget。
 
-**具体案例：**
-- 错题本卡片复习模式：QSplitter + QScrollArea + 自定义卡片Widget
-- AI助手悬浮窗：QFrame + QPropertyAnimation + 拖拽事件处理
+**2. 数据库设计能力**：掌握规范化设计（第三范式）、外键约束和索引优化。设计12张表实现复杂的多对多关系，错题本查询优化后速度提升300%。
 
----
+**3. Git版本控制**：实践main/exam/review三分支策略，成功管理50+次提交和15+次分支合并，使用git reset保持历史清晰。
 
-**2. 数据库设计能力**
-- **规范化设计**：从ER图到第三范式的实践
-- **外键约束**：理解数据完整性的重要性
-- **索引优化**：学会使用索引提升查询效率
-
-**具体案例：**
-- 设计12张表，实现复杂的多对多关系（exam_questions表）
-- 错题本查询优化：添加索引后查询速度提升**300%**
+**4. API集成经验**：理解RESTful API调用机制，使用QThread实现异步编程，优雅处理网络超时和API失效。
 
 ---
 
-**3. Git版本控制**
-- **分支管理**：main/exam/review三分支策略实践
-- **冲突解决**：手动merge，理解冲突产生原因
-- **提交规范**：养成规范提交信息的习惯
+**项目管理能力：**
 
-**具体案例：**
-- 成功管理50+次提交，15+次分支合并
-- 使用git reset删除无用提交，保持历史清晰
+**1. 需求分析与迭代开发**：理解学生学习Python的痛点，区分核心功能和扩展功能，采用迭代开发（v1.0基础功能 → v1.1错题本重构 → v1.2 AI助手）。
 
----
+**2. 团队协作**：按模块分配任务，使用review分支审查组员代码，成功协调3人团队按时完成项目。
 
-**4. API集成经验**
-- **RESTful API调用**：理解HTTP请求/响应机制
-- **异步编程**：使用QThread避免界面卡顿
-- **错误处理**：网络超时、API失效的优雅处理
-
-**具体案例：**
-- 集成DeepSeek API，实现智能问答
-- 多线程异步请求，界面流畅度100%
-
----
-
-#### 项目管理能力
-
-**1. 需求分析**
-- **用户调研**：理解学生学习Python的痛点
-- **功能优先级**：区分核心功能和锦上添花功能
-- **迭代开发**：v1.0基础功能 → v1.1错题本重构 → v1.2 AI助手
-
----
-
-**2. 团队协作**
-- **分工明确**：按模块分配任务，减少冲突
-- **代码审查**：review分支审查组员代码
-- **沟通技巧**：技术讨论、问题反馈、进度同步
-
-**具体案例：**
-- 组员传来代码 → 整合到review分支 → 本地测试 → 合并到main
-- 成功协调3人团队，按时完成项目
-
----
-
-**3. 问题解决能力**
-- **调试技巧**：使用断点、打印日志、异常堆栈分析
-- **资料查找**：官方文档、Stack Overflow、GitHub Issues
-- **举一反三**：遇到问题后总结通用解决方案
-
-**具体案例：**
-- 错题本重构时登录失败bug：通过日志定位，发现是SystemWidget过早访问数据库导致
-- AI助手超时问题：增加超时保护，显示加载动画
-
----
-
-### 7.2 项目不足与改进方向
-
-#### 当前不足
-
-**1. 单元测试缺失**
-- **现状**：主要依赖手动测试
-- **改进**：引入pytest框架，编写单元测试
-
-**2. 性能优化空间**
-- **现状**：题库加载时一次性读取所有题目
-- **改进**：分页加载，减少内存占用
-
-**3. 用户权限管理**
-- **现状**：所有用户共享同一账号（用户名：1，密码：1）
-- **改进**：添加注册功能，多用户独立账号
+**3. 问题解决能力**：掌握断点调试、日志分析、异常堆栈追踪等调试技巧，善于查找官方文档和GitHub Issues，举一反三总结通用解决方案。
 
 ---
 
@@ -1198,4 +350,3 @@ plt.title('各分类准确率统计')
 **日期：2025年12月26日**
 **Python代码行数：10,100行**（核心代码，开发过程约13,000行）
 **项目地址：[https://github.com/mjiayue/111-master](https://github.com/mjiayue/111-master)**
-
